--- a/index.html
+++ b/index.html
@@ -38,15 +38,21 @@
             <h1 id="main">Trump employee said 'boss' wanted server deleted, persecutors say</h1>
             <img id="trump_img" src="/images/trump.jpg">
             <h2>Trump wanted Mar-a-Lago security footage deleted to prevent it 'from being provided to a federal grand jury,'' the indictment says</h2>
-            <ul>
-                <li>Takeaways from the new charges against Trump, aide and Mar-a-Lago worker</li>
-                <li>Trump charged with additional obstruction counts</li>
-                <li>Read: New charges in Trump Mar-a-Lago classified documents case</li>
-                <li>Honig outlines prosecutors' bigger tactical move in latest indictment</li>
-                <li>Listen: The document Trump was caught discussing is part of new charges</li>
-                <li>What to know about where the legal process is going in Trump's indictments</li>
-                <li>Kaitlan Collins points out 'key part' of latest charge against Trump</li>
-            </ul>
+            <p id="trump_para">
+                Takeaways from the new charges against Trump, aide and Mar-a-Lago 
+                <br>
+                Trump charged with additional obstruction counts
+                <br>
+                Read: New charges in Trump Mar-a-Lago classified documents case
+                <br>
+                Honig outlines prosecutors' bigger tactical move in latest indictment
+                <br>
+                Listen: The document Trump was caught discussing is part of new charges
+                <br>
+                What to know about where the legal process is going in Trump's indictments
+                <br>
+                Kaitlan Collins points out 'key part' of latest charge against Trump
+            <p>
         </div>
         <div>
             <img id="fienstien" src="/images/fienstien.jpg">
@@ -62,6 +68,9 @@
             <h3 id="sing">Eagles co-founder whose vocals shined on 'Take It to the Limit' dies at 77, band says</h3>
             <p id="ipsum"> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? </p>
             <hr>
+            <p id="lorem_ipsum"> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </p>
+            <hr>
+            <a id="promo" href="https://www.cnn.com/"> For more articles click here </a>
         </div>
 </body>
 </html>
