--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="nav_bar">
         <img id="drop" class="hover" src="./images/drop_down.png">
         <a href="https://www.cnn.com">
-            <img src="/images/CNN_logo.png" class="hover" id="logo">
+            <img src="./images/CNN_logo.png" class="hover" id="logo">
         </a>
         <a href="https://www.cnn.com/us"><div class="hover">US</div></a>
         <a href="https://www.cnn.com/politics"><div class="hover">Politics</div></a>
